--- a/resources/styles/layout/header.css
+++ b/resources/styles/layout/header.css
@@ -1,3 +1,21 @@
-.navbar {
-    border-bottom: solid 1px var(--primary-color);
+.main-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 75vh;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.main-header--title {
+    max-width: 450px;
+    margin: 0 auto;
+    padding: 100px 0;
+    color: var(--white-color);
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 1.4;
+    text-align: center;
+    text-shadow: 0 2px 2px color(var(--dark-color) a(10%));
 }
