--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,12 +1,30 @@
 <footer class="footer">
-    <div class="container">
-        <div class="content has-text-centered">
-            <p>
-                <strong>Haywire</strong> by <a href="https://github.com/robbinworks">Robbin Johansson</a>.
-            </p>
-            <p class="is-size-7">
-                Grav theme made for developers.
-            </p>
+    <div class="footer-message">
+        <div class="container">
+            <div class="footer-message--icon">
+                <svg class="icon icon-home"><use xlink:href="./svg/svg-symbols.svg#icon-home-color"></use></svg>
+            </div>
+            <div class="footer-message--content">
+                <h3 class="footer-message--title">
+                    Parcelasenvalencia.com le ayuda descubrir el lugar perfecto donde vivir y parcelas donde contruir la casa de sus sueños.
+                </h3>
+                <div class="footer-message--text">
+                    <p>Parcelasenvalencia.com es una web que ofrece solares y parcelas en venta, locales en alquiler donde establecer su próximo negocio en la zona de Valencia y alrededores. También le ofrece información de la zona donde se encuentra así como le ayuda a figurarse qué, donde y cuando comprar, vender o alquilar. También puede ver precios, lugares interesantes de la zona que aportan valor a las parcelas. En zonas cerca de Valencia como la Pobla de Vallbona, Ribarroja, Benissanó, L'eliana, Villamarchante, entre otras. Contacte con nosotros y obtenga consejo y opiniones de expertos locales.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-colophon">
+        <div class="container">
+            <ul class="footer-colophon--links">
+                <li><a href="#">Solar en Pobla de Vallbona</a></li>
+                <li><a href="#">Solar en l'Eliana</a></li>
+                <li><a href="#">Solar en Villamarchante</a></li>
+                <li><a href="#">Local en Pobla de Vallbona</a></li>
+                <li><a href="#">Términos y condiciones</a></li>
+                <li><a href="#">Privacidad</a></li>
+            </ul>
+            <div class="footer-colophon--text">Copyright © 2018 parcelasenvalencia.com. Todos los derechos reservados.</div>
         </div>
     </div>
 </footer>
