--- a/resources/styles/base/fonts.css
+++ b/resources/styles/base/fonts.css
@@ -1,95 +1,103 @@
-/* @font-face {
+@font-face {
     font-family: 'Montserrat';
-    src: url('../fonts/Montserrat-ExtraLight.eot');
-    src: url('../fonts/Montserrat-ExtraLight.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Montserrat-ExtraLight.woff2') format('woff2'),
-    url('../fonts/Montserrat-ExtraLight.woff') format('woff'),
-    url('../fonts/Montserrat-ExtraLight.ttf') format('truetype'),
-    url('../fonts/Montserrat-ExtraLight.svg#Montserrat-ExtraLight') format('svg');
+    src: url('../../fonts/Montserrat-ExtraLight.eot');
+    src:
+        url('../../fonts/Montserrat-ExtraLight.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-ExtraLight.woff2') format('woff2'),
+        url('../../fonts/Montserrat-ExtraLight.woff') format('woff'),
+        url('../../fonts/Montserrat-ExtraLight.ttf') format('truetype'),
+        url('../../fonts/Montserrat-ExtraLight.svg#Montserrat-ExtraLight') format('svg');
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
-	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat-ExtraLightItalic.eot');
-	src: url('../fonts/Montserrat-ExtraLightItalic.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-ExtraLightItalic.woff2') format('woff2'),
-		url('../fonts/Montserrat-ExtraLightItalic.woff') format('woff'),
-		url('../fonts/Montserrat-ExtraLightItalic.ttf') format('truetype'),
-		url('../fonts/Montserrat-ExtraLightItalic.svg#Montserrat-ExtraLightItalic') format('svg');
-	font-weight: 200;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat-Regular.eot');
-	src: url('../fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-Regular.woff2') format('woff2'),
-		url('../fonts/Montserrat-Regular.woff') format('woff'),
-		url('../fonts/Montserrat-Regular.ttf') format('truetype'),
-		url('../fonts/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat-Italic.eot');
-	src: url('../fonts/Montserrat-Italic.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-Italic.woff2') format('woff2'),
-		url('../fonts/Montserrat-Italic.woff') format('woff'),
-		url('../fonts/Montserrat-Italic.ttf') format('truetype'),
-		url('../fonts/Montserrat-Italic.svg#Montserrat-Italic') format('svg');
-	font-weight: normal;
-	font-style: italic;
-}
-
-@font-face {
-	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat-Medium.eot');
-	src: url('../fonts/Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-Medium.woff2') format('woff2'),
-		url('../fonts/Montserrat-Medium.woff') format('woff'),
-		url('../fonts/Montserrat-Medium.ttf') format('truetype'),
-		url('../fonts/Montserrat-Medium.svg#Montserrat-Medium') format('svg');
-	font-weight: 500;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat-MediumItalic.eot');
-	src: url('../fonts/Montserrat-MediumItalic.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-MediumItalic.woff2') format('woff2'),
-		url('../fonts/Montserrat-MediumItalic.woff') format('woff'),
-		url('../fonts/Montserrat-MediumItalic.ttf') format('truetype'),
-		url('../fonts/Montserrat-MediumItalic.svg#Montserrat-MediumItalic') format('svg');
-	font-weight: 500;
-	font-style: italic;
+    font-family: 'Montserrat';
+    src: url('../../fonts/Montserrat-ExtraLightItalic.eot');
+    src:
+        url('../../fonts/Montserrat-ExtraLightItalic.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-ExtraLightItalic.woff2') format('woff2'),
+        url('../../fonts/Montserrat-ExtraLightItalic.woff') format('woff'),
+        url('../../fonts/Montserrat-ExtraLightItalic.ttf') format('truetype'),
+        url('../../fonts/Montserrat-ExtraLightItalic.svg#Montserrat-ExtraLightItalic') format('svg');
+    font-weight: 200;
+    font-style: italic;
 }
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('../fonts/Montserrat-Bold.eot');
-    src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
-    url('../fonts/Montserrat-Bold.woff2') format('woff2'),
-    url('../fonts/Montserrat-Bold.woff') format('woff'),
-    url('../fonts/Montserrat-Bold.ttf') format('truetype'),
-    url('../fonts/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
+    src: url('../../fonts/Montserrat-Regular.eot');
+    src:
+        url('../../fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-Regular.woff2') format('woff2'),
+        url('../../fonts/Montserrat-Regular.woff') format('woff'),
+        url('../../fonts/Montserrat-Regular.ttf') format('truetype'),
+        url('../../fonts/Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../fonts/Montserrat-Italic.eot');
+    src:
+        url('../../fonts/Montserrat-Italic.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-Italic.woff2') format('woff2'),
+        url('../../fonts/Montserrat-Italic.woff') format('woff'),
+        url('../../fonts/Montserrat-Italic.ttf') format('truetype'),
+        url('../../fonts/Montserrat-Italic.svg#Montserrat-Italic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../fonts/Montserrat-Medium.eot');
+    src:
+        url('../../fonts/Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-Medium.woff2') format('woff2'),
+        url('../../fonts/Montserrat-Medium.woff') format('woff'),
+        url('../../fonts/Montserrat-Medium.ttf') format('truetype'),
+        url('../../fonts/Montserrat-Medium.svg#Montserrat-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../fonts/Montserrat-MediumItalic.eot');
+    src:
+        url('../../fonts/Montserrat-MediumItalic.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-MediumItalic.woff2') format('woff2'),
+        url('../../fonts/Montserrat-MediumItalic.woff') format('woff'),
+        url('../../fonts/Montserrat-MediumItalic.ttf') format('truetype'),
+        url('../../fonts/Montserrat-MediumItalic.svg#Montserrat-MediumItalic') format('svg');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../fonts/Montserrat-Bold.eot');
+    src:
+        url('../../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-Bold.woff2') format('woff2'),
+        url('../../fonts/Montserrat-Bold.woff') format('woff'),
+        url('../../fonts/Montserrat-Bold.ttf') format('truetype'),
+        url('../../fonts/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
-	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat-BoldItalic.eot');
-	src: url('../fonts/Montserrat-BoldItalic.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Montserrat-BoldItalic.woff2') format('woff2'),
-		url('../fonts/Montserrat-BoldItalic.woff') format('woff'),
-		url('../fonts/Montserrat-BoldItalic.ttf') format('truetype'),
-		url('../fonts/Montserrat-BoldItalic.svg#Montserrat-BoldItalic') format('svg');
-	font-weight: bold;
-	font-style: italic;
-} */
+    font-family: 'Montserrat';
+    src: url('../../fonts/Montserrat-BoldItalic.eot');
+    src:
+        url('../../fonts/Montserrat-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('../../fonts/Montserrat-BoldItalic.woff2') format('woff2'),
+        url('../../fonts/Montserrat-BoldItalic.woff') format('woff'),
+        url('../../fonts/Montserrat-BoldItalic.ttf') format('truetype'),
+        url('../../fonts/Montserrat-BoldItalic.svg#Montserrat-BoldItalic') format('svg');
+    font-weight: bold;
+    font-style: italic;
+}
