Add home grid items, desktop navigation, fonts, and basic styles

--- a/resources/styles/components/product-list.css
+++ b/resources/styles/components/product-list.css
@@ -1,16 +1,38 @@
 .product-list {
-    padding: 30px 0;
+    padding: 50px 0;
 
     @media (--min-desktop) {
-        padding: 50px 0;
+        padding: 80px 0;
     }
 }
 
 .product-list--title {
-    padding-bottom: 20px;
+    position: relative;
+    margin-bottom: 50px;
     color: var(--gray-dark-color);
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+
+    @media (--min-desktop) {
+        margin-bottom: 80px;
+    }
+
+    &:before {
+        position: absolute;
+        top: calc(100% + 10px);
+        left: 50%;
+        width: 100px;
+        height: 5px;
+        background: color(var(--primary-color) a(50%));
+        content: "";
+        transform: translateX(-50%);
+    }
+
+    p {
+        position: relative;
+    }
 }
 
 .product-list--content {
