--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -2,7 +2,7 @@
     <div class="footer-message">
         <div class="container">
             <div class="footer-message--icon">
-                <svg class="icon icon-home"><use xlink:href="./svg/svg-symbols.svg#icon-home-color"></use></svg>
+                {% include "/partials/svg/home-color.svg.twig" %}
             </div>
             <div class="footer-message--content">
                 <h3 class="footer-message--title">
