--- a/resources/styles/components/grid-item.css
+++ b/resources/styles/components/grid-item.css
@@ -1,7 +1,7 @@
 .grid-item {
-    border-radius: 5px;
-    border: 1px solid color(var(--gray-color) a(20%));
     overflow: hidden;
+    border: 1px solid color(var(--gray-color) a(20%));
+    border-radius: 5px;
     transition: box-shadow var(--main-transition);
 
     &:focus,
@@ -10,47 +10,87 @@
     }
 }
 
+.grid-item--anchor {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .grid-item--image {
+    position: relative;
     width: 100%;
     height: 200px;
-    background-size: cover;
-    background-position: center center;
     background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.grid-item--image-number {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 10px 20px;
+    background: color(var(--dark-color) a(50%));
+    color: var(--light-color);
+    font-size: 12px;
+    font-weight: 300;
 }
 
 .grid-item--content {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
     padding: 20px;
     color: var(--gray-dark-color);
 }
 
 .grid-item--name {
     margin-bottom: 5px;
-    font-size: 24px;
     color: var(--primary-color);
+    font-size: 18px;
     font-weight: 500;
+}
+
+.grid-item--details {
+    margin-bottom: 5px;
+    color: var(--gray-color);
+    font-size: 16px;
+    font-weight: 300;
+
+    span {
+        position: relative;
+        margin-right: 10px;
+    }
+
+    span + span {
+        padding-left: 10px;
+
+        &:before {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            width: 1px;
+            background: color(var(--gray-color) a(20%));
+            content: "";
+        }
+    }
 }
 
 .grid-item--location {
     margin-bottom: 15px;
-    font-size: 15px;
     color: var(--gray-color);
-}
-
-.grid-item--details {
-    margin-bottom: 10px;
-    color: var(--gray-color);
-    font-size: 18px;
-
-    span {
-        padding-right: 10px;
-    }
+    font-size: 14px;
+    font-weight: 300;
 }
 
 .grid-item--description {
+    flex: 1 1 auto;
     margin-bottom: 20px;
-    font-size: 14px;
-    line-height: 1.4;
     color: var(--gray-color);
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.4;
 }
 
 .grid-item--actions {
@@ -62,6 +102,9 @@
 
     svg {
         display: inline-block;
+        width: 1em;
+        height: 1em;
+        font-size: 20px;
         vertical-align: middle;
     }
 }
