--- a/templates/partials/navbar.html.twig
+++ b/templates/partials/navbar.html.twig
@@ -1,23 +1,19 @@
 <navbar inline-template>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="container is-fluid">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="{{ base_url == '' ? '/' : base_url }}">
-                    {{ config.site.title }}
-                </a>
+    <nav class="main-nav" role="navigation" aria-label="main navigation">
+        <a href="{{ base_url == '' ? '/' : base_url }}" class="main-nav--logo">
+            {{ config.site.title }}
+        </a>
 
-                <div class="navbar-burger" :class="{'is-active': navIsActive}" @click.prevent="toggleNav()">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
-
-            <div class="navbar-menu" :class="{'is-active': navIsActive}">
-                {% block header_navigation %}
-                    {% include 'partials/navigation.html.twig' %}
-                {% endblock %}
-            </div>
+        <div class="main-nav--list">
+            {% block header_navigation %}
+                {% include 'partials/navigation.html.twig' %}
+            {% endblock %}
         </div>
+
+        <a href="" class="main-nav--toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
     </nav>
 </navbar>
