--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -2,24 +2,40 @@
     {% for p in page.children.visible %}
         {% set current_page = (p.active or p.activeChild) ? 'is-active' : '' %}
         {% if p.children.visible.count > 0 %}
-            <div class="navbar-item has-dropdown is-hoverable">
-                <a href="{{ p.url }}" class="navbar-link {{ p.slug }} {{ current_page }}" {% if p.template == 'external' %} target="_BLANK" rel="noopener" {% endif %}>
+            <div class="main-nav--item main-nav--dropdown">
+                <a 
+                href="{{ p.url }}" 
+                class="main-nav--link {{ p.slug }} {{ current_page }}" 
+                {% if p.template == 'external' %} target="_BLANK" rel="noopener" {% endif %}>
                     {{ p.menu }}
                 </a>
 
-                <div class="navbar-dropdown is-right">
-                    {{ _self.loop(p) }}
+                <div class="main-nav--dropdown-list">
+                    {# {{ _self.loop(p) }} #}
+
+                    {% for children in p.children %}
+                        <a 
+                        href="{{ children.url }}" 
+                        class="main-nav--dropdown-item {{ 'is-' ~ children.slug }} {{ current_page }}" 
+                        {% if children.template == 'external' %} target="_BLANK" rel="noopener" {% endif %}>
+                            {{ children.menu }}
+                        </a>
+                    {% endfor %}
                 </div>
             </div>
         {% else %}
-            <a href="{{ p.url }}" class="navbar-item {{ p.slug }} {{ current_page }}" {% if p.template == 'external' %} target="_BLANK" rel="noopener" {% endif %}>
+            <a 
+            href="{{ p.url }}" 
+            class="main-nav--item main-nav--link {{ p.slug }} {{ current_page }}" 
+            {% if p.template == 'external' %} target="_BLANK" rel="noopener" {% endif %}>
                 {{ p.menu }}
             </a>
         {% endif %}
     {% endfor %}
 {% endmacro %}
 
-<div class="navbar-end">
+{{ _self.loop(pages) }}
+{# <div class="navbar-end">
     {% if theme_config.dropdown.enabled %}
         {{ _self.loop(pages) }}
     {% else %}
@@ -30,4 +46,5 @@
             </a>
         {% endfor %}
     {% endif %}
-</div>
+</div> #}
+
