--- a/resources/styles/helpers/variables.css
+++ b/resources/styles/helpers/variables.css
@@ -11,7 +11,7 @@
     /* COLORS */
     --primary-color: #3FB9BE;
     --secondary-color: #5B5F97;
-    --tertiary-color: #EFF7F7;
+    --tertiary-color: #D0D1DB;
     --dark-color: #000000;
     --gray-dark-color: #3B4144;
     --gray-color: #6A6F70;
