--- a/templates/product.html.twig
+++ b/templates/product.html.twig
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+    {% include '/partials/product/header.html.twig' %}
+    {% include '/partials/product/media.html.twig' %}
 
 <div class="product-list--item grid-item">
     <a href="#" class="grid-item--anchor">
